@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020200325"
-#define public MagickPackageReleaseDate "snapshot-20200325"
+#define public MagickPackageVersionAddendum ".020200327"
+#define public MagickPackageReleaseDate "snapshot-20200327"
